# radicle-jetbrains-plugin

./: .gitignore  CHANGELOG.md  DEVELOPING.md  FUNDING.json  README.md  api.http  build.gradle.kts  checkstyle.xml  gradle.properties  qodana.yml  settings.gradle.kts
.github/workflows/: build.yml  code_quality.yml  draft_release.yml  end-to-end-tests.yml  plugin_verifier.yml  release.yml  run-ui-tests.yml
.radicle/: github_actions.yaml
.run/: Run IDE for UI Tests.run.xml
config/checkstyle/: checkstyle.xml
gradle/: libs.versions.toml
jrad/: Cargo.toml
jrad/src/: bin.rs  lib.rs  main.rs
src/main/java/com/github/jchrist/radicleintellijplugin/: MyBundle.java
src/main/java/network/radicle/jetbrains/radiclejetbrainsplugin/: MyBundle.java  PushDialog.java  RadicleBundle.java  RadiclePullAction.java  RadiclePullEvent.java  RadiclePushAction.java  RadiclePushEvent.java  RadicleSyncAction.java  RadicleSyncEvent.java  UpdateBackgroundTask.java  Util.java
src/main/kotlin/com/github/jchrist/radicleintellijplugin/: MyBundle.kt
src/main/resources/messages/: RadicleBundle.properties
src/test/java/network/radicle/jetbrains/radiclejetbrainsplugin/: AbstractIT.java  ActionsTest.java  CreateCommandLineJavaTest.java  GitExecutor.java  GitTestUtil.java  RadStub.java  RadicleMenusJavaTest.java  RadicleSettingsHandlerTest.java  RadicleSettingsViewTest.java  SayHelloJavaTest.java  StatusPanelTest.java
src/test/kotlin/com/github/jchrist/radicleintellijplugin/: MyPluginTest.kt
src/test/kotlin/network/radicle/jetbrains/radiclejetbrainsplugin/: CreateCommandLineKotlinTest.kt  (+3 more)
(+230 files in other folders)
